# dark-souls-armor-optimizer

./: Pipfile  README.md  convert_armor_csv_to_json.py  darksouls-character-classes.json  darksouls-equipment-stats-0.json  darksouls-equipment-stats-10.json  darksouls-ring-stats.json  filter_raymondhill_source_csv.py  generate_darksouls_data.py  generate_report.py  knapsack.py  optimize.py  pyproject.toml
WIP/: TYPER_application.py  argtest.py  test.py  test_simple.py  test_tap.py
equipment_optimizer/: __init__.py  __main__.py  application.py  equipment.py  game_data.py  optimizer.py  quote_csv_strings.py
equipment_optimizer/builtin_game_data/dark_souls/: sevaht-darksouls-ring-stats.csv
equipment_optimizer/builtin_game_data/dark_souls/base/: raymondhill-darksouls-armor-stats-0.csv
equipment_optimizer/builtin_game_data/dark_souls/upgraded/: raymondhill-darksouls-armor-stats-10.csv
equipment_optimizer/game_data/: __init__.py  collection.py
equipment_optimizer/game_data/dark_souls/base/: raymondhill-darksouls-armor-stats-0.csv
source/: darksouls-armor-stats-10.csv
source-data/: raymondhill-darksouls-armor-stats-0.csv  sevaht-darksouls-ring-stats.json
tests/: test_equipment_optimizer.py
