[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.poetry]
name = "equipment-optimizer"
version = "0.1.0"
description = ""
authors = ["Jacob McIntosh <nacitar.sevaht@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sortedcontainers = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^21.8b0"

[tool.poetry.scripts]
equipment-optimizer = "equipment_optimizer.__main__:main"
quote-csv-strings = "equipment_optimizer.quote_csv_strings:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
